--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marissa",
+  "name": "mainpage",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://marissawong.github.io/",
